# xai-hfagent

./: README.md  hf_agents_components.py  pyproject.toml  requirements.txt
.github/workflows/: run-workflow-tests.yml
examples/: HF_sample.xircuits
